--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://thymeleaf.org"
    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
    <head>
-      <title>EventosApp</title>
+   	  <meta charset="utf-8"/>
+      <title>Sistema de Doações</title>
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
       <!--Import materialize.css-->
@@ -15,15 +16,15 @@
       <header>
          <nav class="menu">
             <div class="nav-wrapper">
-               <a href="#" class="brand-logo">Lista de Eventos</a>
+               <a href="#" class="brand-logo">Lista de Doadores</a>
                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                  <li><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar evento</a></li>
+                  <li><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Novo Doador</a></li>
                </ul>
             </div>
          </nav>
       </header>
-      <h1>Sistema para cadastro de eventos!!</h1>
-      <h3>Faça seu Login e cadastre seus eventos e listas de convidados!</h3>
+      <h1>Sistema para cadastro de Doadores!!</h1>
+      <h3>Faça seu Login e cadastre novos Doadores e liste suas Doações!</h3>
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
    </body>
