--- a/src/main/resources/templates/doador/formDoador.html
+++ b/src/main/resources/templates/doador/formDoador.html
@@ -16,7 +16,7 @@
       <header>
          <nav class="menu">
             <div class="nav-wrapper">
-               <a href="/index" class="brand-logo">Cadastro de Doadores:</a>
+               <a href="/" class="brand-logo">Cadastro de Doadores:</a>
                <ul id="nav-mobile" class="right hide-on-med-and-down">
                   <li><a href="/doadores" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Doadores</a></li>
                </ul>
