--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,9 +16,11 @@
       <header>
          <nav class="menu">
             <div class="nav-wrapper">
-               <a href="#" class="brand-logo">Lista de Doadores</a>
+               <a href="/" class="brand-logo">Lista de Doadores</a>
                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                  <li><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Novo Doador</a></li>
+                  <li><a href="/logout" class="waves-effect waves-light btn">Logout</a></li>
+                  <li><a href="/cadastrarDoador" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Novo Doador</a></li>
+                  <li><a href="/doadores" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Doadores</a></li>
                </ul>
             </div>
          </nav>
