--- a/src/main/resources/templates/listaDoadores.html
+++ b/src/main/resources/templates/listaDoadores.html
@@ -16,7 +16,7 @@
       <header>
          <nav class="menu">
             <div class="nav-wrapper">
-               <a href="/index" class="brand-logo">Lista de Doadores</a>
+               <a href="/" class="brand-logo">Lista de Doadores</a>
                <ul id="nav-mobile" class="right hide-on-med-and-down">
                   <li><a href="/cadastrarDoador" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Nova Doação</a></li>
                </ul>
