--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,33 +1,41 @@
-<!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org"
-   xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-   <head>
-   	  <meta charset="utf-8"/>
-      <title>Sistema de Doações</title>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <link rel="stylesheet" href="style/styleCss.css"/>
-   </head>
-   <body>
-      <header>
-         <nav class="menu">
-            <div class="nav-wrapper">
-               <a href="/" class="brand-logo">Lista de Doadores</a>
-               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                  <li><a href="/logout" class="waves-effect waves-light btn">Logout</a></li>
-                  <li><a href="/cadastrarDoador" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Novo Doador</a></li>
-                  <li><a href="/doadores" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Doadores</a></li>
-               </ul>
-            </div>
-         </nav>
-      </header>
-      <h1>Sistema para cadastro de Doadores!!</h1>
-      <h3>Faça seu Login e cadastre novos Doadores e liste suas Doações!</h3>
-      <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-   </body>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <title>Cadastro Doações - Principal</title>
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <!-- Custom styles for this template -->
+    <link href="styles.css" rel="stylesheet"/>
+  </head>
+  <body>
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+      <h5 class="my-0 mr-md-auto font-weight-normal">Controle Doações</h5>
+      <nav class="my-2 my-md-0 mr-md-3">
+        <a class="p-2 text-dark" href="/">Início</a>
+        <a class="p-2 text-dark" href="/cadastrarDoador">Novo Doador</a>
+        <a class="p-2 text-dark" href="/doadores">Lista Doadores</a>
+      </nav>
+      <a class="btn btn-outline-primary" href="/logout">Sair</a>
+    </div>
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+      <h1 class="display-4">Seja Bem vindo!</h1>
+      <p class="lead mx-5">Aqui você poderá manter o gerênciamento de todas as doações de seus respectivos doadores. Com acesso atribuído por administradores e mantenedores.</p>
+    </div>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="jquery/jquery.slim.min.js"></script>
+    <script src="popper.js/popper.js.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="holder/holder.min.js"></script>
+    <script>
+      Holder.addTheme('thumb', {
+        bg: '#55595c',
+        fg: '#eceeef',
+        text: 'Thumbnail'
+      });
+    </script>
+  </body>
 </html>
