fechando tela de inclusão doador

--- a/src/main/resources/templates/doador/formDoador.html
+++ b/src/main/resources/templates/doador/formDoador.html
@@ -1,47 +1,77 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org"
    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-   <head>
-   	  <meta charset="utf-8"/>
-      <title>Sistema de Doações</title>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <link rel="stylesheet" href="style/styleCss.css"/>
-   </head>
-   <body>
-      <header>
-         <nav class="menu">
-            <div class="nav-wrapper">
-               <a href="/" class="brand-logo">Cadastro de Doadores:</a>
-               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                  <li><a href="/doadores" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Doadores</a></li>
-               </ul>
-            </div>
-         </nav>
-      </header>
-      <th:block th:include="mensagemValidacao"></th:block>
-      <div class="container formDoador">
-         <form class="container" method="post">
-            Nome: <input type="text" value="" name="nome"/>
-            <div class="row">
-               <div class="input-field col s6">
-                  Local: <input type="text" value="" name="local"/>
-               </div>
-               <div class="input-field col s3">
-                  Data: <input type="date" value="" name="data"/>
-               </div>
-               <div class="input-field col s3">
-                  Horario: <input type="time" value="" name="horario"/>
-               </div>
-            </div>
-            <button class="waves-effect waves-light btn" type="submit">Salvar</button>
-         </form>
-      </div>
-      <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-   </body>
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <title>Cadastro Doações - Principal</title>
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <!-- Custom styles for this template -->
+    <link href="styles.css" rel="stylesheet"/>
+  </head>
+  <body>
+  	
+  	<!-- NAVBAR -->
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+      <h5 class="my-0 mr-md-auto font-weight-normal">CONTROLE DE DOAÇÕES</h5>
+      <nav class="my-2 my-md-0 mr-md-3">
+        <a class="p-2 text-dark" href="/">Início</a>
+        <a class="p-2 text-dark" href="/cadastrarDoador">Novo Doador</a>
+        <a class="p-2 text-dark" href="/doadores">Lista Doadores</a>
+      </nav>
+      <a class="btn btn-outline-primary" href="/logout">Sair</a>
+    </div>
+   
+    <!-- FORMULÁRIO -->
+	<section>
+		<div class="container py-5">
+			<h2 class="text-center py-3">INCLUIR NOVO DOADOR</h2>
+			<form method="post">
+				<div class="row" style="width: 100%; max-width: 820px; padding: 15px; margin: 0 auto">
+					<div class="col-md-12 py-3">
+						<!-- VERIFICADOR DE CAMPOS NULOS -->
+					    <span class="py-5"><th:block th:include="mensagemValidacao"></th:block></span>
+						<label> Nome: </label> 
+						<input class="form-control" placeholder="Inserir Nome" type="text" value="" name="nome"/>
+					</div>
+					<div class="col-md-6 py-3">
+						<label> Local: </label>
+						<input class="form-control" placeholder="Inserir Local" type="text" value="" name="local"/>
+					</div>
+					<div class="col-md-6 py-3">
+						<div class="row">
+							<div class="col-md-6">
+								<label> Data: </label>
+								<input class="form-control" type="date" value="" name="data"/>
+							</div>
+							<div class="col-md-6">
+								<label> Horário: </label>
+								<input class="form-control" type="time" value="" name="horario"/>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12 pt-3">
+						<button style="width: 100%; max-width: 100px; padding: 5px; margin: 0 auto" class="btn btn-primary btn-lg btn-block" type="submit"> Salvar </button>
+					</div>
+				</div>
+			</form>
+		</div>
+	</section>
+      
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="jquery/jquery.slim.min.js"></script>
+    <script src="popper.js/popper.js.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="holder/holder.min.js"></script>
+    <script>
+      Holder.addTheme('thumb', {
+        bg: '#55595c',
+        fg: '#eceeef',
+        text: 'Thumbnail'
+      });
+    </script>
+  </body>
 </html>
