ajustes campo localidade

--- a/src/main/resources/templates/doador/formDoador.html
+++ b/src/main/resources/templates/doador/formDoador.html
@@ -37,7 +37,12 @@
 					</div>
 					<div class="col-md-6 py-3">
 						<label> Local: </label>
-						<input class="form-control" placeholder="Inserir Local" type="text" value="" name="local"/>
+						<select class="custom-select"  name="local">
+							<option>Selecione um Estado</option>
+								<option value="São Paulo">São Paulo</option>
+								<option value="Rio de Janeiro">Rio de Janeiro</option>
+								<option value="Brasília">Brasília</option>
+						</select>
 					</div>
 					<div class="col-md-6 py-3">
 						<div class="row">
