correção erros e finalização view listagem doadores

--- a/src/main/resources/templates/listaDoadores.html
+++ b/src/main/resources/templates/listaDoadores.html
@@ -1,49 +1,68 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org"
+<html lang="pt-br" xmlns:th="http://thymeleaf.org"
    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-   <head>
-   	  <meta charset="utf-8"/>
-      <title>Sistema de Doações</title>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <link rel="stylesheet" href="style/styleCss.css"/>
-   </head>
-   <body>
-      <header>
-         <nav class="menu">
-            <div class="nav-wrapper">
-               <a href="/" class="brand-logo">Lista de Doadores</a>
-               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                  <li><a href="/cadastrarDoador" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Nova Doação</a></li>
-               </ul>
-            </div>
-         </nav>
-      </header>
-      <table class="container">
-         <thead>
-            <tr>
-               <th>Nome</th>
-               <th>Local</th>
-               <th>Data</th>
-               <th>Horario</th>
-               <th>Deletar</th>
-            </tr>
-         </thead>
-         <tbody>
-            <tr th:each="doador : ${doadores}">
-               <td><a th:href="${(#mvc.url('DC#detalhesDoador').arg(0, doador.codigo)).build()}"><span th:text="${doador.nome}"></span></a></td>
-               <td><span th:text="${doador.local}"></span></td>
-               <td><span th:text="${doador.data}"></span></td>
-               <td><span th:text="${doador.horario}"></span></td>
-               <td><a class="waves-effect waves-light btn-small" th:href="${(#mvc.url('DC#deletarDoador').arg(0, doador.codigo)).build()}"><i class="material-icons left">delete</i></a></td>
-            </tr>
-         </tbody>
-      </table>
-      <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-   </body>
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <title>Cadastro Doações - Listagem</title>
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"/>
+    <!-- Custom styles for this template -->
+    <link href="styles.css" rel="stylesheet"/>
+  </head>
+  <body class="bg-light">
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+      <h5 class="my-0 mr-md-auto font-weight-normal">CONTROLE DE DOAÇÕES</h5>
+      <nav class="my-2 my-md-0 mr-md-3">
+        <a class="p-2 text-dark" href="/">Início</a>
+        <a class="p-2 text-dark" href="/cadastrarDoador">Novo Doador</a>
+        <a class="p-2 text-dark" href="/doadores">Lista Doadores</a>
+      </nav>
+      <a class="btn btn-outline-primary" href="/logout">Sair</a>
+    </div>
+	<section>
+		<div class="container text-center py-5">
+			<div class="row py-3">
+				<div class="col-md-12">
+					<table class="table table-hover" style="background-color: white;">
+						<thead>
+						   <tr>
+							  <th scope="col">Nome</th>
+							  <th scope="col">Local</th>
+							  <th scope="col">Data</th>
+							  <th scope="col">Horario</th>
+							  <th scope="col">Deletar</th>
+						   </tr>
+						</thead>
+						<tbody>
+						   <tr th:each="doador : ${doadores}">
+							  <td><a th:href="${(#mvc.url('DC#detalhesDoador').arg(0, doador.codigo)).build()}"><span th:text="${doador.nome}"></span></a></td>
+							  <td><span th:text="${doador.local}"></span></td>
+							  <td><span th:text="${doador.data}"></span></td>
+							  <td><span th:text="${doador.horario}"></span></td>
+							  <td><a class="waves-effect waves-light btn-small" th:href="${(#mvc.url('DC#deletarDoador').arg(0, doador.codigo)).build()}"><i class="fas fa-trash"></i></a></td>
+						   </tr>
+						</tbody>
+						
+					 </table>
+				</div>
+			</div>
+		</div>
+	</section>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="jquery/jquery.slim.min.js"></script>
+    <script src="popper.js/popper.js.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="holder/holder.min.js"></script>
+    <script>
+      Holder.addTheme('thumb', {
+        bg: '#55595c',
+        fg: '#eceeef',
+        text: 'Thumbnail'
+      });
+    </script>
+  </body>
 </html>
