--- a/src/main/resources/templates/doador/formDoador.html
+++ b/src/main/resources/templates/doador/formDoador.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org"
+<html lang="pt-br" xmlns:th="http://thymeleaf.org"
    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <title>Cadastro Doações - Principal</title>
+    <title>Cadastro Doações - Doador</title>
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <!-- Custom styles for this template -->
     <link href="styles.css" rel="stylesheet"/>
   </head>
-  <body>
+  <body class="bg-light">
   	
   	<!-- NAVBAR -->
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
