--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org"
+<html lang="pt-br" xmlns:th="http://thymeleaf.org"
    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
   <head>
     <meta charset="utf-8"/>
@@ -10,7 +10,7 @@
     <!-- Custom styles for this template -->
     <link href="styles.css" rel="stylesheet"/>
   </head>
-  <body>
+  <body class="bg-light">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
       <h5 class="my-0 mr-md-auto font-weight-normal">CONTROLE DE DOAÇÕES</h5>
       <nav class="my-2 my-md-0 mr-md-3">
@@ -21,7 +21,7 @@
       <a class="btn btn-outline-primary" href="/logout">Sair</a>
     </div>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h1 class="display-4">Seja Bem vindo!</h1>
+      <h1 class="display-4 py-3">Seja Bem vindo!</h1>
       <p class="lead mx-5">Aqui você poderá manter o gerênciamento de todas as doações de seus respectivos doadores. Com acesso atribuído por administradores e mantenedores.</p>
     </div>
     <!-- Bootstrap core JavaScript
