ajustes detalhes e nomenclaturas

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,6 +21,7 @@
       <a class="btn btn-outline-primary" href="/logout">Sair</a>
     </div>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+      <img src="img/logo.jpg" class="img-fluid" alt="Responsive image"/>	
       <h1 class="display-4 py-3">Seja Bem vindo!</h1>
       <p class="lead mx-5">Aqui você poderá manter o gerênciamento de todas as doações de seus respectivos doadores. Com acesso atribuído por administradores e mantenedores.</p>
     </div>
