--- a/src/main/resources/templates/doador/formDoador.html
+++ b/src/main/resources/templates/doador/formDoador.html
@@ -25,8 +25,8 @@
    
     <!-- FORMULÁRIO -->
 	<section>
-		<div class="container py-5">
-			<h2 class="text-center py-3">INCLUIR NOVO DOADOR</h2>
+		<div class="container py-5" style="background-color: white">
+			<h2 class="text-center py-3">Inclusão de Novo Doador</h2>
 			<form method="post">
 				<div class="row" style="width: 100%; max-width: 820px; padding: 15px; margin: 0 auto">
 					<div class="col-md-12 py-3">
