--- a/src/main/resources/templates/listaDoadores.html
+++ b/src/main/resources/templates/listaDoadores.html
@@ -22,10 +22,11 @@
       <a class="btn btn-outline-primary" href="/logout">Sair</a>
     </div>
 	<section>
-		<div class="container text-center py-5">
+		<div class="container text-center py-5" style="background-color: white">
+			<h2 class="text-center py-3">Listagem Doadores</h2>
 			<div class="row py-3">
 				<div class="col-md-12">
-					<table class="table table-hover" style="background-color: white;">
+					<table class="table table-hover">
 						<thead>
 						   <tr>
 							  <th scope="col">Nome</th>
