--- a/src/main/resources/templates/doador/detalhesDoador.html
+++ b/src/main/resources/templates/doador/detalhesDoador.html
@@ -1,67 +1,76 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org"
+<html lang="pt-br" xmlns:th="http://thymeleaf.org"
    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-   <head>
-   	  <meta charset="utf-8"/>
-      <title>Sistema de Doações</title>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <link rel="stylesheet" href="style/styleCss.css"/>
-   </head>
-   <body>
-      <header>
-         <nav class="menu">
-            <div class="nav-wrapper">
-               <a href="/" class="brand-logo">Doador</a>
-               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                  <li><a href="/doadores" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Lista de Doadores</a></li>
-               </ul>
-            </div>
-         </nav>
-      </header>
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <title>Cadastro Doações - Principal</title>
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <!-- Custom styles for this template -->
+    <link href="styles.css" rel="stylesheet"/>
+  </head>
+  <body class="bg-light">
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+      <h5 class="my-0 mr-md-auto font-weight-normal">CONTROLE DE DOAÇÕES</h5>
+      <nav class="my-2 my-md-0 mr-md-3">
+        <a class="p-2 text-dark" href="/">Início</a>
+        <a class="p-2 text-dark" href="/cadastrarDoador">Novo Doador</a>
+        <a class="p-2 text-dark" href="/doadores">Lista Doadores</a>
+      </nav>
+      <a class="btn btn-outline-primary" href="/logout">Sair</a>
+    </div>
       
-      <div th:each="doador : ${doador}" class="container detalhesDoador">
-         <h5>Detalhes do Doador</h5>
-         <div class="row">
-            <p>Nome: <span th:text="${doador.nome}"></span></p>
-            <p>Local: <span th:text="${doador.local}"></span></p>
-            <p>Data: <span th:text="${doador.data}"></span></p>
-            <p>Horario: <span th:text="${doador.horario}"></span></p>
-         </div>
-      </div>
+	<!-- LISTAGEM DOADOR SELECIONADO -->
+	<div th:each="doador : ${doador}">
+		<h5>Detalhes do Doador</h5>
+		<p>Nome: <span th:text="${doador.nome}"></span></p>
+		<p>Local: <span th:text="${doador.local}"></span></p>
+		<p>Data: <span th:text="${doador.data}"></span></p>
+		<p>Horario: <span th:text="${doador.horario}"></span></p>
+	 </div>
+	
+	 <!-- CAMPO DE VALIDAÇÃO -->
+	 <th:block th:include="mensagemValidacao"></th:block>
+	 
+	 <!-- CADASTRAR NOVA DOAÇÃO -->
+	<form method="post" th:object="${doador}">
+		Nome: <input type="text" value="" name="nomeDoacao" placeholder="Nome Completo"/>
+		Rg: <input type="text" value="" name="rg" placeholder="AA-00.000.000" class="validate"/>
+		<button class="waves-effect waves-light btn" type="submit">Adicionar</button>
+	</form>
+	 
+	<!-- LISTAGEM DOAÇÕES CADASTRADAS  -->
+	<table>
+		<thead>
+			<tr>
+				<th>Doação</th>
+				<th>RG</th>
+				<th>Deletar</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="doacao : ${doacoes}">
+				<td><span th:text="${doacao.nomeDoacao}"></span></td>
+				<td><span th:text="${doacao.rg}"></span></td>
+				<td><a class="waves-effect waves-light btn-small" th:href="${(#mvc.url('DC#deletarDoacao').arg(0, doacao.rg)).build()}"><i class="material-icons left">delete</i></a></td>
+			</tr>
+		</tbody>
+	</table>
       
-      <th:block th:include="mensagemValidacao"></th:block>
-      
-      <div class="container formDoacao">
-         <form method="post" th:object="${doador}">
-            Nome: <input type="text" value="" name="nomeDoacao" placeholder="Nome Completo"/>
-            Rg: <input type="text" value="" name="rg" placeholder="AA-00.000.000" class="validate"/>
-            <button class="waves-effect waves-light btn" type="submit">Adicionar</button>
-         </form>
-      </div>
-      
-      <table class="container tabelaDoacdor">
-         <thead>
-            <tr>
-               <th>Doação</th>
-               <th>RG</th>
-               <th>Deletar</th>
-            </tr>
-         </thead>
-         <tbody>
-            <tr th:each="doacao : ${doacoes}">
-               <td><span th:text="${doacao.nomeDoacao}"></span></td>
-               <td><span th:text="${doacao.rg}"></span></td>
-               <td><a class="waves-effect waves-light btn-small" th:href="${(#mvc.url('DC#deletarDoacao').arg(0, doacao.rg)).build()}"><i class="material-icons left">delete</i></a></td>
-            </tr>
-         </tbody>
-      </table>
-      
-      <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-   </body>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="jquery/jquery.slim.min.js"></script>
+    <script src="popper.js/popper.js.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="holder/holder.min.js"></script>
+    <script>
+      Holder.addTheme('thumb', {
+        bg: '#55595c',
+        fg: '#eceeef',
+        text: 'Thumbnail'
+      });
+    </script>
+  </body>
 </html>
