--- a/src/main/resources/templates/mensagemValidacao.html
+++ b/src/main/resources/templates/mensagemValidacao.html
@@ -5,7 +5,7 @@
    <head>
    </head>
    <body>
-      <div class="alert alert-success alert-dismissible" role="alert" th:if="${not #strings.isEmpty(mensagem)}">
+      <div class="alert alert-secondary" role="alert" th:if="${not #strings.isEmpty(mensagem)}">
          <span th:text="${mensagem}"></span>
       </div>
    </body>
