--- a/src/main/resources/templates/doador/detalhesDoador.html
+++ b/src/main/resources/templates/doador/detalhesDoador.html
@@ -4,9 +4,10 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <title>Cadastro Doações - Principal</title>
+    <title>Cadastro Doações - Doador</title>
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"/>
     <!-- Custom styles for this template -->
     <link href="styles.css" rel="stylesheet"/>
   </head>
@@ -21,42 +22,86 @@
       <a class="btn btn-outline-primary" href="/logout">Sair</a>
     </div>
       
-	<!-- LISTAGEM DOADOR SELECIONADO -->
-	<div th:each="doador : ${doador}">
-		<h5>Detalhes do Doador</h5>
-		<p>Nome: <span th:text="${doador.nome}"></span></p>
-		<p>Local: <span th:text="${doador.local}"></span></p>
-		<p>Data: <span th:text="${doador.data}"></span></p>
-		<p>Horario: <span th:text="${doador.horario}"></span></p>
-	 </div>
+	<section>
+		<div class="container py-5" style="background-color: white">
+			<h3 class="display-4 text-center py-3">Ficha Doador</h3>
+			<div class="row py-3" style="width: 100%; max-width: 820px; padding: 15px; margin: 0 auto">
+				<!-- LISTAGEM DOADOR SELECIONADO -->
+				<div class="col-md-12 py-3">
+					<div th:each="doador : ${doador}">
+						<div class="row">
+							<div class="col-md-1">
+								<p class="py-2">Nome</p>
+								<p class="py-1">Local</p>
+								<p class="py-1">Data</p>
+								<p class="py-1">Horário</p>
+							</div>
+							<div class="col-md-11">
+								<ul class="list-group">
+									<li class="list-group-item"><span th:text="${doador.nome}"></span></li>
+									<li class="list-group-item"><span th:text="${doador.local}"></span></li>
+									<li class="list-group-item"><span th:text="${doador.data}"></span></li>
+									<li class="list-group-item"><span th:text="${doador.horario}"></span></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
 	
-	 <!-- CAMPO DE VALIDAÇÃO -->
-	 <th:block th:include="mensagemValidacao"></th:block>
-	 
-	 <!-- CADASTRAR NOVA DOAÇÃO -->
-	<form method="post" th:object="${doador}">
-		Nome: <input type="text" value="" name="nomeDoacao" placeholder="Nome Completo"/>
-		Rg: <input type="text" value="" name="rg" placeholder="AA-00.000.000" class="validate"/>
-		<button class="waves-effect waves-light btn" type="submit">Adicionar</button>
-	</form>
-	 
-	<!-- LISTAGEM DOAÇÕES CADASTRADAS  -->
-	<table>
-		<thead>
-			<tr>
-				<th>Doação</th>
-				<th>RG</th>
-				<th>Deletar</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="doacao : ${doacoes}">
-				<td><span th:text="${doacao.nomeDoacao}"></span></td>
-				<td><span th:text="${doacao.rg}"></span></td>
-				<td><a class="waves-effect waves-light btn-small" th:href="${(#mvc.url('DC#deletarDoacao').arg(0, doacao.rg)).build()}"><i class="material-icons left">delete</i></a></td>
-			</tr>
-		</tbody>
-	</table>
+				<!-- CADASTRAR NOVA DOAÇÃO -->
+				<div class="col-md-12 py-3">
+					<h4 class="py-3">Incluir Nova Doação</h4>
+					<form method="post" th:object="${doador}">
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group">
+									<label>Item Doado:</label>
+									<input class="form-control" type="text" name="nomeDoacao" placeholder="Doação"/>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="form-group">	
+									<label>Rg:</label>
+									<input class="form-control" type="text" name="rg" placeholder="AA-00.000.000"/>
+								</div>
+							</div>
+							<div class="col-md-12">
+								<div class="row">
+									<div class="col-md-10 text-center">
+										<th:block th:include="mensagemValidacao"></th:block>
+									</div>
+									<div class="col-md-2 text-right py-3">
+										<button class="btn btn-primary" type="submit">Adicionar</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</form>
+				</div>
+	
+				<!-- LISTAGEM DOAÇÕES CADASTRADAS  -->
+				<div class="col-md-12 py-3">
+					<h4 class="py-3">Listas de Itens Doados</h4>
+					<table class="table table-hover text-center">
+						<thead>
+							<tr>
+								<th scope="col">Doação</th>
+								<th scope="col">RG</th>
+								<th scope="col">Remover</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr th:each="doacao : ${doacoes}">
+								<td><span th:text="${doacao.nomeDoacao}"></span></td>
+								<td><span th:text="${doacao.rg}"></span></td>
+								<td><a th:href="${(#mvc.url('DC#deletarDoacao').arg(0, doacao.rg)).build()}"><i class="fas fa-trash"></i></a></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</section>
       
     <!-- Bootstrap core JavaScript
     ================================================== -->
