--- a/src/main/resources/templates/doador/formDoador.html
+++ b/src/main/resources/templates/doador/formDoador.html
@@ -9,6 +9,9 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <!-- Custom styles for this template -->
     <link href="styles.css" rel="stylesheet"/>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
   </head>
   <body class="bg-light">
   	
@@ -34,7 +37,7 @@
 						<input class="form-control" placeholder="Inserir Nome" type="text" name="nome"/>
 					</div>
 					<div class="col-md-6 py-3">
-						<label> Local: </label>
+						<label> Endereço: </label>
 						<select class="custom-select"  name="local">
 							<option>Selecione um Estado</option>
 								<option value="São Paulo">São Paulo</option>
