--- a/src/main/resources/templates/listaDoadores.html
+++ b/src/main/resources/templates/listaDoadores.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"/>
     <!-- Custom styles for this template -->
     <link href="styles.css" rel="stylesheet"/>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
   </head>
   <body class="bg-light">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
@@ -30,7 +33,7 @@
 						<thead>
 						   <tr>
 							  <th scope="col">Nome</th>
-							  <th scope="col">Local</th>
+							  <th scope="col">Endereço</th>
 							  <th scope="col">Data</th>
 							  <th scope="col">Horario</th>
 							  <th scope="col">Deletar</th>
