--- a/src/main/resources/templates/doador/formDoador.html
+++ b/src/main/resources/templates/doador/formDoador.html
@@ -34,26 +34,21 @@
 				<div class="row" style="width: 100%; max-width: 820px; padding: 15px; margin: 0 auto">
 					<div class="col-md-12 py-3">
 						<label> Nome: </label> 
-						<input class="form-control" placeholder="Inserir Nome" type="text" name="nome"/>
+						<input class="form-control" placeholder="Inserir Nome" type="text" name="nomeDoador"/>
 					</div>
 					<div class="col-md-6 py-3">
 						<label> Endereço: </label>
-						<select class="custom-select"  name="local">
-							<option>Selecione um Estado</option>
-								<option value="São Paulo">São Paulo</option>
-								<option value="Rio de Janeiro">Rio de Janeiro</option>
-								<option value="Brasília">Brasília</option>
-						</select>
+						<input class="form-control" placeholder="Inserir Endereço" type="text" name="endereco"/>
 					</div>
 					<div class="col-md-6 py-3">
 						<div class="row">
 							<div class="col-md-6">
-								<label> Data: </label>
-								<input class="form-control" type="date" name="data"/>
+								<label> Bairro: </label>
+								<input class="form-control" placeholder="Inserir Bairro" type="text" name="bairro"/>
 							</div>
 							<div class="col-md-6">
-								<label> Horário: </label>
-								<input class="form-control" type="time" name="horario"/>
+								<label> Data de Inclusão: </label>
+								<input class="form-control" type="date" name="data"/>
 							</div>
 						</div>
 					</div>
